executable("tincan") {
    if (is_linux) {   
        sources = [
            "trunk/src/tincan.cc",
            "trunk/src/control_dispatch.cc",
            "trunk/src/control_listener.cc",
            "trunk/src/tincan_control.cc",
            "trunk/src/tincan_main.cc",
            "trunk/src/virtual_link.cc",
            "trunk/src/tap_frame.cc",
            "trunk/src/single_link_tunnel.cc",
            "trunk/src/basic_tunnel.cc",
            "trunk/src/tunnel_threads.cc",
            "trunk/src/async_io.cc",
        ]
        include_dirs = [
            "trunk/include",
            "../../external/include/webrtc",
            "../../external/include",
        ]

        if (is_linux) {
            sources += [
                "trunk/src/linux/tapdev_lnx.cc",
                "trunk/src/linux/lnx_exception.cc"
            ]

            include_dirs += [
                "trunk/include/linux",
            ]

            cflags = [ "-Wno-deprecated-declarations" ]
            defines = [
                "LINUX",
                "_TNC_LINUX",
                "WEBRTC_POSIX",
            ]
        }
        lib_dirs = [
            "../../external/libs"
        ]
        libs = [
            "webrtc_lite", "jsoncxx",
            "boringssl",
            "boringssl_asm",
            "srtp",
            "protobuf_lite",
            "abseil_cpp"
        ]
        #configs -=["//build/config/compiler:no_exceptions",]
        #configs +=["//build/config/compiler:exceptions",]
    }
}


